@startuml
!include ../exasol.skin
package com.exasol.util {
	interface HierarchicalVisitor <<interface>>
	abstract class AbstractHierarchicalVisitor <<abstract>> {
		+ register(child : HiearchicalVisitor) : void
	} 
}
package com.exasol.sql {
	interface Fragment <<interface>>
	abstract class AbstractFragment <<abstract>> {
		+ accept(visitor : FragmentVisitor) : void
	}
	interface FragmentVisitor
	
}

package com.exasol.sql.dql {
	class SqlStatement
	class Field
}

package com.exasol.sql.rendering {
	class BooleanExpressionRenderingVisitor
}

AbstractHierarchicalVisitor .u.|> HierarchicalVisitor
FragmentVisitor -u-|> AbstractHierarchicalVisitor
BooleanExpressionRenderingVisitor -u-|> AbstractHierarchicalVisitor
BooleanExpressionRenderingVisitor -l-> FragmentVisitor : registered sub-visitor

AbstractFragment .u.|> Fragment
SqlStatement -d-|> Fragment
Field -d-|> Fragment
AbstractFragment -r-> FragmentVisitor : accepts

@enduml